Improved player controller